header alignment with icon circles is fixed. Icons and circles are enlarged.

--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ p, li {
 
 img {
 	display: block;
-	margin: 15% 10% 15% 18%;
-	width: 160px;
+	margin: 15% 10% 15% 1%;
+	width: 250px;
 	border-radius: 50%;
 	
 }
@@ -67,9 +67,11 @@ div {
 	bottom: 0;
 }
 
-.boxHeather {
+.boxHeader {
 	background-color: #D5D7EB;
 	margin: 0;
+	max-height: 50px;
+	position: relative;
 }
 
 
@@ -77,7 +79,6 @@ div {
 	color: black;
 	font-size: 20px;
 	margin: 0px;
-	background-color: #D5D7EB;
  	font-weight: bold;
  	
 	
@@ -186,11 +187,11 @@ div .innerSide {
 	background-color: #29627e;
 }
 
-#mybar {
+.mybar {
 	width:80%;
 }
 
-#teamwork {
+.teamwork {
 	width:90%;
 }
 
@@ -201,32 +202,33 @@ div .innerSide {
 	
 }
 
-#left {
+.left {
 	color: blue;
 	display: inline-block;
 
 }
 
-#right {
+.right {
 	color: green;
 	display: inline-block;
 	
 }
 
-#circle {
-  position: relative;
+.circle {
+  position: absolute;
   border: 2px solid black;
   background-color: white;
   margin: 0;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border-radius: 50px;
   display: inline-block;
-  font-size: 20px;
+  font-size: 30px;
   transform: translate(-48%,0%);
+  top: -10px;
 }
 
-#text {
+.text {
   position: relative;
   top: 50%;
   left: 50%;
@@ -235,7 +237,7 @@ div .innerSide {
   
 }
 
-#graduationHat {
+.graduationHat {
 	transform: translate(16%,13%);
 }
 
@@ -243,4 +245,5 @@ div .innerSide {
 	color: black;
 	display: inline-block;
 	width:94%;
+	margin-left: 44px;
 }
